--- a/.env
+++ b/.env
@@ -1,12 +1,6 @@
 # Configuración de backend
-REACT_APP_API_URL=backend-portfolio-ar3p.onrender.com
+REACT_APP_API_URL=https://backend-portfolio-ar3p.onrender.com
 
 # configuracion frontend render
 PORT=3000
 REACT_APP_URL=portfolio-luis-cabrera.vercel.app
-# DB_HOST=localhost
-# DB_PORT=5432
-# DB_USERNAME=postgres
-# DB_PASSWORD=123579468
-# DB_NAME=Web
-# DB_SSL=true
