--- a/.env
+++ b/.env
@@ -3,4 +3,5 @@ REACT_APP_API_URL=https://backend-portfolio-ar3p.onrender.com
 
 # configuracion frontend render
 PORT=3000
-REACT_APP_URL=portfolio-luis-cabrera.vercel.app
+REACT_APP_URL=https://portfolio-luis-cabrera-b8acrinnt.vercel.app
+
