--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Configuración de backend
-REACT_APP_API_URL=backend-portfolio-ar3p.onrender.com
+REACT_APP_API_URL=https://backend-portfolio-ar3p.onrender.com
 
 # configuracion frontend render
 PORT=3000
